# kevinbotlib-networking

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: client_benchmark.py  console.py  server_startup.py
kevinbotlib_networking/: __init__.py  kevinbotlib_networking.pyi
python/kevinbotlib_networking/: kevinbotlib_networking.pyi
src/: client.rs  lib.rs  logging.rs  server.rs
tests/: test_client.py  test_server_startup_shutdown.py
